5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1723_2502.log
== TEST (2019-05-14 11:01:05) 
-- CODE:
from math import*
n = int(input("No. de termos:"))
soma = 0
i = 0
fim = n -1
while (i<= fim):
	soma = soma + ((-1)** (i)*1/((2*i+1)*3**i)*sqrt(12)
	i = i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:29) 
-- CODE:
from math import*
n = int(input("No. de termos:"))
soma = 0
i = 0
fim = n -1
while (i<= fim):
	soma = soma + (-1)** (i)*1/((2*i+1)*3**i)*sqrt(12)
	i = i+1
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:01:36) 
-- CODE:
from math import*
n = int(input("No. de termos:"))
soma = 0
i = 0
fim = n -1
while (i<= fim):
	soma = soma + (-1)** (i)*1/((2*i+1)*3**i)*sqrt(12)
	i = i+1
print(round(soma,8))
-- EXECUTION TIME:
0.174235
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
